# nhi-sentinel

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  readme.md  ruff.toml
.github/workflows/: ci.yml
agents/base/: agent.py  tool_registry.py
agents/data_agent/: agent.py
agents/infra_agent/: agent.py
agents/provisioner_agent/: agent.py
agents/secops_agent/: agent.py
anomaly/: baseline.py  scorer.py  service.py
approval/: api.py  models.py  queue.py
audit/: api.py  consumer.py  producer.py  schema.py
cloud_sim/: bootstrap.py
dashboards/: agent_actions.json  anomaly_detection.json  identity_lifecycle.json
docs/: study-guide.md  threat_model.md
docs/adr/: ADR-001-langgraph-over-react.md  ADR-002-opa-plus-cedar.md  ADR-003-fail-closed-pep.md  ADR-004-kafka-audit-bus.md  ADR-005-jwt-bearer-no-static-secrets.md
identity/: api.py  config.py  manifest_schema.py  provisioner.py  token_manager.py  vault_client.py
identity/manifests/: agent-infra-001.yaml
infra/keycloak/: keycloak-init.sh
infra/loki/: loki.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/vault/: vault-init.sh
pep/: cedar_evaluator.py  client.py  exceptions.py  models.py
policy/cedar/: iam_resource_policy.cedar  s3_resource_policy.cedar
policy/rego/: authorization.rego
tests/: conftest.py  test_attack_scenarios.py  test_audit_pipeline.py  test_identity_api.py  test_phase1_integration.py  test_policy_boundaries.py
ui/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+21 files in other folders)
